双向放大缩小实现

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(OpenCV)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 set(CMAKE_CXX_STANDARD 11)
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp seam.cpp)
 
 add_executable(seam_resize ${SOURCE_FILES})
 target_link_libraries(seam_resize ${OpenCV_LIBS} )
